--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:ignore="MissingConstraints"
         android:orientation="vertical">
         <androidx.appcompat.widget.SearchView
@@ -17,23 +17,12 @@
             app:iconifiedByDefault="false"
             app:queryHint="아이템 검색"
             tools:ignore="MissingConstraints" />
-        <ScrollView
+        <ListView
+            android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:text="몽환의 벨트"
-                    android:textSize="20sp"
-                    android:onClick="test"
-                    tools:ignore="MissingConstraints" />
-            </LinearLayout>
-        </ScrollView>
+            android:layout_height="match_parent"
+            android:layout_margin="10dp">
+        </ListView>
 
     </LinearLayout>
 
