--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,25 @@
         tools:ignore="MissingConstraints">
 
         <ImageView
+            android:id="@+id/selected_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="30dp"
-            android:src="@drawable/mongbel"
+            android:src="@drawable/ui_button_search"
             android:onClick="goSearch"
             tools:ignore="MissingConstraints"/>
 
         <Button
+            android:id="@+id/button0"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="#8CDC7A"
+            android:text="장비선택"
+            android:layout_margin="5dp"
+            tools:ignore="MissingConstraints" />
+        <Button
             android:id="@+id/button1"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="#8CDC7A"
             android:text="주문서"
@@ -31,7 +40,7 @@
             tools:ignore="MissingConstraints" />
         <Button
             android:id="@+id/button2"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="#8CDC7A"
             android:text="추가옵션"
@@ -39,7 +48,7 @@
             tools:ignore="MissingConstraints" />
         <Button
             android:id="@+id/button3"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="#8CDC7A"
             android:layout_margin="5dp"
@@ -48,7 +57,7 @@
             tools:ignore="MissingConstraints" />
         <Button
             android:id="@+id/button4"
-            android:layout_width="180dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="#8CDC7A"
             android:layout_margin="5dp"
