--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:layout_width="wrap_content"
@@ -16,6 +18,7 @@
             android:text="아이템을 강화합니다."
             android:textSize="20sp"/>
         <ImageView
+            android:id="@+id/equipment_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="20dp"
@@ -54,13 +57,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
+                        android:id="@+id/button_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
                         android:scaleType="fitCenter"
+                        android:onClick="select"
                         android:src="@drawable/cube_black"/>
                     <ImageView
-                        android:id="@+id/scroll0"
+                        android:id="@+id/check_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -68,7 +73,86 @@
                         android:visibility="invisible"
                         android:src="@drawable/ui_checked"/>
                 </FrameLayout>
-
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/button_1"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/cube_black"/>
+                    <ImageView
+                        android:id="@+id/check_1"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/button_2"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/cube_black"/>
+                    <ImageView
+                        android:id="@+id/check_2"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/button_3"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/cube_black"/>
+                    <ImageView
+                        android:id="@+id/check_3"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/button_4"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/cube_black"/>
+                    <ImageView
+                        android:id="@+id/check_4"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
             </LinearLayout>
         </HorizontalScrollView>
 
