--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -19,30 +19,27 @@
             android:textSize="20sp"/>
         <ImageView
             android:id="@+id/equipment_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="20dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_margin="10dp"
             android:src="@drawable/mongbel" />
         <TextView
+            android:id="@+id/equipment_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="STR : +69(0 +69)"
-            android:textSize="20sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DEX : +15(0 +15)"
-            android:textSize="20sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="INT : +83(20 +63)"
-            android:textSize="20sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="STR : +93(20 +45 +25)"
-            android:textSize="20sp"/>
+            android:layout_marginBottom="10dp"
+            android:text="장비를 추가해주세요."/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="270dp"
+            android:layout_marginHorizontal="20dp">
+            <TextView
+                android:id="@+id/info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="STR : +69(0 +69)"
+                android:textSize="20sp"/>
+        </ScrollView>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
