--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -54,15 +54,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/button_0"
+                        android:id="@+id/scroll_button_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/cube_black"/>
+                        android:src="@drawable/scroll_basic_15"/>
                     <ImageView
-                        android:id="@+id/check_0"
+                        android:id="@+id/scroll_check_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -74,15 +74,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/button_1"
+                        android:id="@+id/scroll_button_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/cube_black"/>
+                        android:src="@drawable/scroll_basic_30"/>
                     <ImageView
-                        android:id="@+id/check_1"
+                        android:id="@+id/scroll_check_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/button_2"
+                        android:id="@+id/scroll_button_2"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
@@ -102,47 +102,7 @@
                         android:onClick="select"
                         android:src="@drawable/cube_black"/>
                     <ImageView
-                        android:id="@+id/check_2"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/button_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/cube_black"/>
-                    <ImageView
-                        android:id="@+id/check_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/button_4"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/cube_black"/>
-                    <ImageView
-                        android:id="@+id/check_4"
+                        android:id="@+id/scroll_check_2"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -156,6 +116,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="60dp"
+            android:onClick="runEnhance"
             android:text="강화하기"/>
         <Button
             android:layout_width="200dp"
