--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -60,29 +60,9 @@
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/scroll_basic_15"/>
+                        android:src="@drawable/scroll_basic"/>
                     <ImageView
                         android:id="@+id/scroll_check_0"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_1"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_basic_30"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -100,7 +80,7 @@
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/cube_black"/>
+                        android:src="@drawable/scroll_white"/>
                     <ImageView
                         android:id="@+id/scroll_check_2"
                         android:layout_width="90dp"
