--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,22 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
-        <ImageView
-            android:id="@+id/selected_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="100dp"
-            android:src="@drawable/ui_button_search"
-            tools:ignore="MissingConstraints"/>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp">
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/ui_empty_equipment"/>
+            <ImageView
+                android:id="@+id/selected_image"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:padding="10dp"
+                android:src="@drawable/ui_request_equipment"
+                tools:ignore="MissingConstraints"/>
+        </FrameLayout>
         <TextView
             android:id="@+id/selected_name"
             android:layout_width="wrap_content"
