--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -29,17 +29,26 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="장비를 추가해주세요."/>
-        <ScrollView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="270dp"
-            android:layout_marginHorizontal="20dp">
-            <TextView
-                android:id="@+id/info"
+            android:layout_height="match_parent">
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="STR : +69(0 +69)"
-                android:textSize="20sp"/>
-        </ScrollView>
+                android:layout_height="270dp"
+                android:layout_marginHorizontal="20dp">
+                <TextView
+                    android:id="@+id/info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="STR : +69(0 +69)"
+                    android:textSize="20sp"/>
+            </ScrollView>
+            <ImageView
+                android:id="@+id/resultEffect"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"/>
+        </FrameLayout>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -74,7 +83,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/scroll_button_2"
+                        android:id="@+id/scroll_button_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
@@ -82,7 +91,47 @@
                         android:onClick="select"
                         android:src="@drawable/scroll_white"/>
                     <ImageView
+                        android:id="@+id/scroll_check_1"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/scroll_button_2"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/scroll_gold_hammer"/>
+                    <ImageView
                         android:id="@+id/scroll_check_2"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/scroll_button_3"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/scroll_innocent"/>
+                    <ImageView
+                        android:id="@+id/scroll_check_3"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -103,5 +152,7 @@
             android:layout_height="60dp"
             android:text="뒤로가기"
             android:onClick="goBack"/>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
