--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -139,6 +139,26 @@
                         android:visibility="invisible"
                         android:src="@drawable/ui_checked"/>
                 </FrameLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:id="@+id/scroll_button_4"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="20dp"
+                        android:scaleType="fitCenter"
+                        android:onClick="select"
+                        android:src="@drawable/scroll_chaos"/>
+                    <ImageView
+                        android:id="@+id/scroll_check_4"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:padding="15dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="invisible"
+                        android:src="@drawable/ui_checked"/>
+                </FrameLayout>
             </LinearLayout>
         </HorizontalScrollView>
 
