--- a/app/src/main/res/layout/text_popup_select.xml
+++ b/app/src/main/res/layout/text_popup_select.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/TxtMemoListType"
     android:layout_width="fill_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
     android:orientation="vertical"
-    android:textColor="#FFFFFF"
+    android:textColor="#5C5C5C"
     android:textSize="22sp"
     >
 </TextView>
