--- a/app/src/main/res/layout/popup_select.xml
+++ b/app/src/main/res/layout/popup_select.xml
@@ -28,11 +28,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
-            android:id="@+id/listview"
+            android:id="@+id/scroll_listview"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:layout_margin="10dp"
-            android:listSelector="#8DD9E3"/>
+            android:listSelector="#88C5CD"
+            />
         <View
             android:background="#66bdbdbd"
             android:layout_width="match_parent"
