--- a/app/src/main/res/layout/activity_flame.xml
+++ b/app/src/main/res/layout/activity_flame.xml
@@ -66,15 +66,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/scroll_button_0"
+                        android:id="@+id/flame_button_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/scroll_basic"/>
+                        android:src="@drawable/flame_eternal"/>
                     <ImageView
-                        android:id="@+id/scroll_check_0"
+                        android:id="@+id/flame_check_0"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -86,15 +86,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <ImageButton
-                        android:id="@+id/scroll_button_1"
+                        android:id="@+id/flame_button_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="20dp"
                         android:scaleType="fitCenter"
                         android:onClick="select"
-                        android:src="@drawable/scroll_white"/>
+                        android:src="@drawable/flame_powerful"/>
                     <ImageView
-                        android:id="@+id/scroll_check_1"
+                        android:id="@+id/flame_check_1"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:padding="15dp"
@@ -102,66 +102,7 @@
                         android:visibility="invisible"
                         android:src="@drawable/ui_checked"/>
                 </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_2"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_gold_hammer"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_2"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_innocent"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_4"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_chaos"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_4"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
+
             </LinearLayout>
         </HorizontalScrollView>
 
