--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -3,27 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        tools:ignore="MissingConstraints">
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+            tools:ignore="MissingConstraints">
+        </com.google.android.gms.ads.AdView>
+    </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
             tools:ignore="MissingConstraints">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 android:text="아이템을 강화합니다."
                 android:textSize="20sp"/>
             <ImageView
                 android:id="@+id/equipment_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_margin="10dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_margin="0dp"
                 android:src="@drawable/mongbel" />
             <TextView
                 android:id="@+id/equipment_name"
@@ -36,7 +53,7 @@
                 android:layout_height="match_parent">
                 <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="270dp"
+                    android:layout_height="330dp"
                     android:layout_marginHorizontal="20dp"
                     android:padding="10dp"
                     android:background="#9C000000">
@@ -162,17 +179,11 @@
                     </FrameLayout>
                 </LinearLayout>
             </HorizontalScrollView>
-
             <Button
                 android:layout_width="200dp"
                 android:layout_height="60dp"
                 android:onClick="runEnhance"
                 android:text="강화하기"/>
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="60dp"
-                android:text="뒤로가기"
-                android:onClick="goBack"/>
         </LinearLayout>
         <ImageView
             android:id="@+id/resultEffect"
@@ -180,5 +191,6 @@
             android:layout_height="match_parent"
             android:scaleType="fitCenter"/>
     </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
