--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp">
-            <ImageView
+            <TextView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/ui_empty_equipment"/>
+                android:background="@drawable/ui_empty_item"/>
             <ImageView
                 android:id="@+id/selected_image"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:padding="15dp"
                 android:src="@drawable/ui_request_equipment"
                 tools:ignore="MissingConstraints"/>
         </FrameLayout>
@@ -49,13 +50,14 @@
             android:id="@+id/selected_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
             android:text="장비를 추가해주세요."/>
         <Button
             android:id="@+id/button0"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#8CDC7A"
+            android:background="@drawable/ui_button_basic"
             android:text="장비추가"
             android:layout_margin="5dp"
             android:onClick="goSearch"
@@ -63,7 +65,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#8CDC7A"
+            android:background="@drawable/ui_button_basic"
             android:text="주문서"
             android:layout_margin="5dp"
             android:onClick="goScroll"
@@ -72,7 +74,7 @@
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#8CDC7A"
+            android:background="@drawable/ui_button_basic"
             android:text="추가옵션"
             android:layout_margin="5dp"
             android:onClick="goFlame"
@@ -81,7 +83,7 @@
             android:id="@+id/button3"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#8CDC7A"
+            android:background="@drawable/ui_button_basic"
             android:layout_margin="5dp"
             android:text="잠재옵션"
             android:onClick="goPotential"
@@ -90,7 +92,7 @@
             android:id="@+id/button4"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#8CDC7A"
+            android:background="@drawable/ui_button_basic"
             android:layout_margin="5dp"
             android:text="스타포스"
             tools:ignore="MissingConstraints" />
