--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/equipment_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="10dp"
                 android:text="장비를 추가해주세요."/>
             <FrameLayout
                 android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none"
-                android:layout_margin="10dp">
+                android:layout_margin="15dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -82,17 +82,19 @@
                         android:layout_height="match_parent">
                         <ImageButton
                             android:id="@+id/scroll_button_0"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/scroll_basic"/>
                         <ImageView
                             android:id="@+id/scroll_check_0"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -102,17 +104,19 @@
                         android:layout_height="match_parent">
                         <ImageButton
                             android:id="@+id/scroll_button_1"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/scroll_white"/>
                         <ImageView
                             android:id="@+id/scroll_check_1"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -122,17 +126,19 @@
                         android:layout_height="match_parent">
                         <ImageButton
                             android:id="@+id/scroll_button_2"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/scroll_gold_hammer"/>
                         <ImageView
                             android:id="@+id/scroll_check_2"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -142,17 +148,19 @@
                         android:layout_height="match_parent">
                         <ImageButton
                             android:id="@+id/scroll_button_3"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/scroll_innocent"/>
                         <ImageView
                             android:id="@+id/scroll_check_3"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -162,17 +170,19 @@
                         android:layout_height="match_parent">
                         <ImageButton
                             android:id="@+id/scroll_button_4"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/scroll_chaos"/>
                         <ImageView
                             android:id="@+id/scroll_check_4"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -182,6 +192,7 @@
             <Button
                 android:layout_width="200dp"
                 android:layout_height="60dp"
+                android:background="@drawable/ui_button_basic"
                 android:onClick="runEnhance"
                 android:text="강화하기"/>
         </LinearLayout>
