--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,30 +30,22 @@
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:src="@drawable/ui_title"/>
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center">
-            <TextView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/ui_empty_item"/>
-            <ImageView
-                android:id="@+id/selected_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:scaleType="fitCenter"
-                android:padding="15dp"
-                android:src="@drawable/ui_request_equipment"
-                tools:ignore="MissingConstraints"/>
-        </FrameLayout>
+        <ImageView
+            android:id="@+id/selected_image"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:background="@drawable/ui_empty_item"
+            android:scaleType="fitCenter"
+            android:padding="15dp"
+            android:src="@drawable/ui_request_equipment"
+            tools:ignore="MissingConstraints"/>
         <TextView
             android:id="@+id/selected_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:layout_gravity="center"
             android:text="장비를 추가해주세요."/>
         <Button
@@ -90,6 +82,7 @@
             android:background="@drawable/ui_button_basic"
             android:layout_margin="5dp"
             android:text="스타포스"
+            android:onClick="goStarforce"
             tools:ignore="MissingConstraints" />
         <Button
             android:layout_width="200dp"
