--- a/app/src/main/res/layout/text_popup_select.xml
+++ b/app/src/main/res/layout/text_popup_select.xml
@@ -7,6 +7,5 @@
     android:padding="5dp"
     android:orientation="vertical"
     android:textColor="#5C5C5C"
-    android:textSize="22sp"
-    >
+    android:textSize="22sp">
 </TextView>
