--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -66,6 +66,7 @@
                         android:layout_height="wrap_content"
                         android:text="선택된 장비가 없습니다."
                         android:textSize="20sp"
+                        android:lineSpacingExtra="5dp"
                         android:textColor="#F1F1F1"/>
 
                 </ScrollView>
