--- a/app/src/main/res/layout/popup_equipment.xml
+++ b/app/src/main/res/layout/popup_equipment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
-    android:layout_height="700dp"
-    android:layout_gravity="center"
+    android:layout_width="350dp"
+    android:layout_height="650dp"
     android:background="#FFFFFF">
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,34 +11,38 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:text="★★★★★ ★★★★★ ★★★★★\n★★★★★ ★★★★★"
             android:textAlignment="center"
             android:textColor="#FFC107" />
         <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="몽환의 벨트"
             android:textAlignment="center"
-            android:textSize="25sp" />
+            android:textSize="23sp" />
         <TextView
+            android:id="@+id/grade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="(레전드리 아이템)"
             android:textAlignment="center"
-            android:textSize="15sp"/>
+            android:textSize="17sp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="10dp"
             android:background="#cccc"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/equipment_image"
+                android:id="@+id/thumnail"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:padding="10dp"
+                android:padding="15dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/ui_empty_item"
                 android:scaleType="fitCenter"
@@ -50,10 +53,11 @@
                 android:layout_margin="10dp"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/attack"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="공격력 증가량"
-                    android:textSize="15sp"
+                    android:textSize="17sp"
                     android:textAlignment="textEnd"/>
                 <TextView
                     android:layout_width="match_parent"
@@ -62,6 +66,7 @@
                     android:textSize="30sp"
                     android:textAlignment="textEnd"/>
                 <TextView
+                    android:id="@+id/reqlev"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="bottom"
@@ -73,13 +78,45 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_margin="10dp"
             android:background="#cccc"/>
         <TextView
+            android:id="@+id/info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="장비 분류 : 벨트\nSTR: +14\nDEX: +14"
-            android:textSize="15sp"/>
+            android:lineSpacingExtra="5dp"
+            android:textSize="18sp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="#cccc"/>
+        <TextView
+            android:id="@+id/potential1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="R 잠재옵션\n잠재능력을 설정해주세요.\n\n"
+            android:lineSpacingExtra="5dp"
+            android:textSize="18sp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="#cccc"/>
+        <TextView
+            android:id="@+id/potential2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="R 에디셔널 잠재옵션\n에디셔널 잠재능력을 설정해주세요.\n\n"
+            android:lineSpacingExtra="5dp"
+            android:textSize="18sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
-
 </ScrollView>
