--- a/app/src/main/res/layout/activity_starforce.xml
+++ b/app/src/main/res/layout/activity_starforce.xml
@@ -42,7 +42,8 @@
                 android:padding="10dp"
                 android:background="@drawable/ui_empty_item"
                 android:scaleType="fitCenter"
-                android:src="@drawable/mongbel" />
+                android:src="@drawable/mongbel"
+                android:onClick="infoPopup"/>
             <TextView
                 android:id="@+id/equipment_name"
                 android:layout_width="wrap_content"
