--- a/app/src/main/res/layout/popup_equipment.xml
+++ b/app/src/main/res/layout/popup_equipment.xml
@@ -9,6 +9,7 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/star"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
