--- a/app/src/main/res/drawable/ui_empty_item.xml
+++ b/app/src/main/res/drawable/ui_empty_item.xml
@@ -1,65 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item
-    android:state_pressed="true">
-    <shape>
-        <solid android:color="#CC759797"/>
-        <stroke
-            android:width="1dp"
-            android:color="#111"/>
-        <corners
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:bottomRightRadius="10dp"/>
-    </shape>
-</item>
+    <item
+        android:state_pressed="true">
+        <shape>
+            <solid android:color="#CCAFD6D6"/>
+            <stroke
+                android:width="1dp"
+                android:color="#CC889898"/>
+            <corners
+                android:topLeftRadius="2dp"
+                android:topRightRadius="2dp"
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
+        </shape>
+    </item>
+    <item
+        android:state_window_focused="false"
+        android:state_enabled="true">
+        <shape>
+            <solid android:color="#CCF1FDFD"/>
+            <stroke
+                android:width="1dp"
+                android:color="#CC889898"/>
+            <corners
+                android:topLeftRadius="2dp"
+                android:topRightRadius="2dp"
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
+        </shape>
+    </item>
 
-<item
-    android:state_window_focused="false"
-    android:state_enabled="true">
-    <shape>
-        <solid android:color="#CCD0DDDD"/>
-        <stroke
-            android:width="1dp"
-            android:color="#111"/>
-        <corners
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:bottomRightRadius="10dp"/>
-    </shape>
-</item>
+    <item
+        android:state_enabled="true">
+        <shape>
+            <solid android:color="#CCF1FDFD"/>
+            <stroke
+                android:width="1dp"
+                android:color="#CC889898"/>
+            <corners
+                android:topLeftRadius="2dp"
+                android:topRightRadius="2dp"
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
+        </shape>
+    </item>
 
-<item
-    android:state_enabled="true">
-    <shape>
-        <solid android:color="#CCD0DDDD"/>
-        <stroke
-            android:width="1dp"
-            android:color="#111"/>
-        <corners
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:bottomRightRadius="10dp"/>
-    </shape>
-</item>
-
-<item
-    android:state_enabled="false">
-    <shape>
-        <solid android:color="#CCD0DDDD"/>
-        <stroke
-            android:width="1dp"
-            android:color="#111"/>
-        <corners
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:bottomRightRadius="10dp"/>
-    </shape>
-</item>
+    <item
+        android:state_enabled="false">
+        <shape>
+            <solid android:color="#CCF1FDFD"/>
+            <stroke
+                android:width="1dp"
+                android:color="#CC889898"/>
+            <corners
+                android:topLeftRadius="2dp"
+                android:topRightRadius="2dp"
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"/>
+        </shape>
+    </item>
 </selector>
