--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -65,6 +65,7 @@
                         android:id="@+id/info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:lineSpacingExtra="5dp"
                         android:text="선택된 장비가 없습니다."
                         android:textSize="20sp"
                         android:textColor="#F1F1F1"/>
