--- a/app/src/main/res/layout/text_popup_select.xml
+++ b/app/src/main/res/layout/text_popup_select.xml
@@ -7,5 +7,6 @@
     android:padding="5dp"
     android:orientation="vertical"
     android:textColor="#5C5C5C"
-    android:textSize="22sp">
+    android:textSize="22sp"
+    android:fontFamily="@font/nexon_low">
 </TextView>
