--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -222,6 +222,12 @@
                     </FrameLayout>
                 </LinearLayout>
             </HorizontalScrollView>
+            <CheckBox
+                android:id="@+id/auto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="AUTO"/>
             <Button
                 android:layout_width="200dp"
                 android:layout_height="60dp"
@@ -229,12 +235,6 @@
                 android:onClick="useCube"
                 android:text="강화하기"/>
         </LinearLayout>
-        <ImageView
-            android:id="@+id/resultEffect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"/>
     </FrameLayout>
 
 
