--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -85,6 +85,7 @@
                 android:scrollbars="none"
                 android:layout_margin="15dp">
                 <LinearLayout
+                    android:id="@+id/buttonPanel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
